--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <span>对对对</span>
-    <div>对什么对</div>
     <br>
     <img src="./images/fenzhi.png" alt="">
+    <span>I DO WHAT I DO</span>
+    <img src="./images/109951163783057657.jpg" alt="">
 </body>
 </html>
